@@ -6,6 +6,19 @@
 -Xmx512m #Java堆最大容量，通常设置成跟初始值一样，避免动态扩展
 -XX:PermSize=128m #永久堆
 -XX:MaxPermSize=128m #永久堆最大容量
+-XX:MetaspaceSize=750m
+-XX:MaxMetaspaceSize=750m
+
+-Xverify:none
 
 -XX:+DisableExplicitGC #显式GC System.gc() 是没有必要的，可通过该选项来屏蔽或者说禁止
+``
+
+## JMX远程控制
+``
+-Dcom.sun.management.jmxremote
+-Dcom.sun.management.jmxremote.port=8578
+-Dcom.sun.management.jmxremote.rmi.port=8578
+-Dcom.sun.management.jmxremote.authenticate=false
+-Dcom.sun.management.jmxremote.ssl=false
 ``
